readme component done

--- a/src/styles/Hero/Hero.scss
+++ b/src/styles/Hero/Hero.scss
@@ -53,7 +53,10 @@
       .block {
         width: 0%;
         height: inherit;
-        background: #ffb510;
+        background: #e65c00;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to left, #F9D423, #e65c00);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to left, #F9D423, #e65c00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
         position: absolute;
         animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
         display: flex;
