--- a/src/styles/Layout/Navbar.scss
+++ b/src/styles/Layout/Navbar.scss
@@ -1,6 +1,6 @@
 .navbar-style {
    background-color: #232323 !important;
-   position: fixed inherit!important;
+   position: fixed!important;
    width: 100%;
 }
 
