projects section done

--- a/src/styles/Hero/Button.scss
+++ b/src/styles/Hero/Button.scss
@@ -90,5 +90,9 @@
     text-decoration: underline;
   }
 
-
+  .button:hover {
+    // text-decoration: none;
+    color:blanchedalmond;
+    text-decoration:wavy;
+  }
   
