--- a/src/styles/Titles.scss
+++ b/src/styles/Titles.scss
@@ -2,14 +2,15 @@
     width: 100%;
     height: fit-content !important;
     height: 70px !important;
-    background-color: rgb(255, 249, 249) !important;
+    background-color: rgb(15,15,15) !important;
     margin:0 auto !important;
     padding: 0 0 0 10px!important;
     color: black !important;
     text-align:start; 
+    border-radius: 0% !important;
   }
   
   .jumbotron h1{
   
-    color: black !important;
+    color: gainsboro !important;
   }
