--- a/src/styles/ReadMe/ReadMe.scss
+++ b/src/styles/ReadMe/ReadMe.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap');
+
 .readme {
   // background-image: url(../../images/wallpaper.jpg);
   background-color: #ffb510;
@@ -10,6 +12,7 @@
   justify-content: center;
   align-items: center;
   color: rgb(30, 27, 27);
+  font-family: 'Montserrat', sans-serif;
 }
 
 .readme img {
