--- a/src/styles/Titles.scss
+++ b/src/styles/Titles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 .jumbotron {
     width: 100%;
     height: fit-content !important;
@@ -13,4 +15,5 @@
   .jumbotron h1{
   
     color: gainsboro !important;
+    font-family: "Poppins";
   }
