--- a/src/styles/Titles.scss
+++ b/src/styles/Titles.scss
@@ -3,8 +3,8 @@
 .jumbotron {
     width: 100%;
     height: fit-content !important;
-    height: 70px !important;
-    background-color: rgb(15,15,15) !important;
+    height: 40px !important;
+    background-color: #201f1f !important;
     margin:0 auto !important;
     padding: 0 0 0 10px!important;
     color: black !important;
@@ -16,4 +16,5 @@
   
     color: gainsboro !important;
     font-family: "Poppins";
+    font-size: 30px;
   }
