--- a/src/styles/Hero/Hero.scss
+++ b/src/styles/Hero/Hero.scss
@@ -30,7 +30,7 @@
   margin: 0 auto;
   width: 100%;
   height: 100vh;
-  background: #232323;
+  background: #201f1f;
   display: flex;
   justify-content: center;
   align-items: center;
