--- a/src/styles/Work/Projects.scss
+++ b/src/styles/Work/Projects.scss
@@ -2,21 +2,23 @@
 
 .projects-cards small {
   font-size: medium;
+  color: rgb(231, 175, 54)
 }
 
 .projects-cards h5 {
-  color: rgb(218, 141, 26);
+  color: white;
+  text-decoration: underline;
 }
 
 .projects {
   color: whitesmoke;
-  background-color: rgb(15, 15, 15);
+  background-color: #201f1f;
   height: fit-content !important;
   font-family: "Montserrat", sans-serif;
 }
 
 .card-body {
-  background-color: rgb(15, 15, 15);
+  background-color:#201f1f;
 }
 
 .card {
