--- a/src/styles/Layout/Navbar.scss
+++ b/src/styles/Layout/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar-style {
-   background-color: #232323 !important;
+   background-color: #201f1f !important;
    position: fixed!important;
    width: 100%;
    z-index: 100;
