some styles changed

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -3,14 +3,14 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    height: 40vh;
+    height: 60vh;
     align-items: center;
     background-color: #ffb510;
   
 }
 
 .social-icons{
-    margin-top: 100px;
+    margin-top: 40px;
     flex-direction: row;
     display: flex;
     justify-content: space-around;
@@ -19,11 +19,13 @@
     
 }
 
+
+
 .social-icons > div{
 
     display: flex;
 
-    padding: 20px;
+    padding: 30px;
     
     
 }
@@ -35,7 +37,7 @@
 
 
 
-.cta-btn {
+.contact-btn {
     display: inline-block;
     position: relative;
     padding: 0.8rem 1.6rem;
@@ -57,10 +59,10 @@
     }
   }
  
-  .btn-box {
+  .contact-box {
      padding-left: 10px;
   }
-  .btn-cv {
+  .contact-cv {
     color: #ffffff;
     border: 2px solid #292828;
       background-color: #292828;
