--- a/src/styles/Layout/Footer.scss
+++ b/src/styles/Layout/Footer.scss
@@ -1,7 +1,12 @@
 footer {
-    background-color: #ffb510;
+    background-color: #201f1f;
+    color: gainsboro;
 }
 
 footer a{
-    color: black;
+    color: gainsboro;
+}
+
+footer a:hover{
+    color: gainsboro;
 }
