--- a/src/styles/Titles.scss
+++ b/src/styles/Titles.scss
@@ -6,15 +6,18 @@
     height: 40px !important;
     background-color: #201f1f !important;
     margin:0 auto !important;
-    padding: 0 0 0 10px!important;
+    padding: 40px 0 20px 10px!important;
     color: black !important;
     text-align:start; 
     border-radius: 0% !important;
+    text-align: center;
+    text-transform: uppercase;
   }
   
   .jumbotron h1{
   
-    color: gainsboro !important;
+    color: rgb(218, 151, 29) !important;
     font-family: "Poppins";
-    font-size: 30px;
+    font-size: 40px;
+  
   }
