--- a/src/styles/Work/Projects.scss
+++ b/src/styles/Work/Projects.scss
@@ -2,11 +2,11 @@
 
 .projects-cards small {
   font-size: medium;
-  color: rgb(231, 175, 54)
+  color: rgb(139, 40, 86)
 }
 
 .projects-cards h5 {
-  color: white;
+  color: gainsboro;
   text-decoration: underline;
 }
 
