--- a/src/styles/Hero/Button.scss
+++ b/src/styles/Hero/Button.scss
@@ -92,7 +92,7 @@
 
   .button:hover {
     // text-decoration: none;
-    color:blanchedalmond;
+    color:rgb(255, 205, 224);
     text-decoration:wavy;
   }
   
