--- a/src/styles/ReadMe/ButtonCV.scss
+++ b/src/styles/ReadMe/ButtonCV.scss
@@ -28,6 +28,8 @@
    border: 2px solid #292828;
    margin: 10px;
    padding: 10px;
+   width: 200px;
+   text-align: center;
    
  
    &::after {
@@ -35,7 +37,7 @@
    }
  
    &:hover {
-     color: #df8b0e;
+    color:rgb(175, 28, 84);
      background-color: rgb(0, 0, 0);
      text-decoration: none;
  
