--- a/src/styles/ReadMe/ReadMe.scss
+++ b/src/styles/ReadMe/ReadMe.scss
@@ -42,6 +42,28 @@ color: white;
   justify-content: space-between;
 }
 
+.stack-style {
+  background-color: rgb(48, 44, 44);
+  padding: 20px;
+  width: fit-content;
+  text-decoration: none;
+  color: gainsboro;
+}
+
+.stack-style:hover {
+  color: gainsboro;
+  text-decoration: none;
+}
+
+.stack-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  line-height: 80px;
+  align-items: center;
+  align-content: center;
+
+}
 
 
 @media (min-width: 30px) {
