some styles changed

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -19,6 +19,20 @@
     
 }
 
+.social-icons img{
+  width: 50px;
+
+  
+  
+}
+
+.social-icons img:hover{
+  color: #df0e70;
+
+  
+  
+}
+
 
 
 .social-icons > div{
