--- a/src/styles/Layout/Navbar.scss
+++ b/src/styles/Layout/Navbar.scss
@@ -6,3 +6,10 @@
    color: rgb(204, 39, 121) !important;
 }
 
+.collapse-style {
+   background-color: rgb(0, 0, 0) !important;
+}
+
+.nav-link {
+   background-color: rgb(32, 31, 31, 0.9);
+}
