--- a/src/styles/Work/Projects.scss
+++ b/src/styles/Work/Projects.scss
@@ -2,11 +2,11 @@
 
 .projects-cards small {
   font-size: medium;
-  color: rgb(139, 40, 86)
+  color: rgb(255, 255, 255)
 }
 
 .projects-cards h5 {
-  color: gainsboro;
+  color: rgb(235, 185, 79);
   text-decoration: underline;
 }
 
