--- a/src/styles/Work/Apps.scss
+++ b/src/styles/Work/Apps.scss
@@ -121,4 +121,8 @@ figure.snip0015:hover figcaption::before {
 }
 
 .app-style {
-    background-color: #201f1f;}
+    background-color: #201f1f;
+    padding-top: 85px;
+    padding-bottom: 40px;  
+  
+}
