--- a/src/styles/Hero/Button.scss
+++ b/src/styles/Hero/Button.scss
@@ -86,15 +86,15 @@
 
   .button {
     // text-decoration: none;
-    color:blanchedalmond;
-    text-decoration: underline;
+    color:rgb(194, 129, 31);
   }
 
   .button:hover {
     // text-decoration: none;
-    color:rgb(255, 205, 224);
-    text-decoration:wavy;
+    color:rgb(146, 1, 57);
+    text-decoration:none;
   }
   
+
 
 
