--- a/src/styles/Layout/Navbar.scss
+++ b/src/styles/Layout/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar-style {
-   background-color: transparent !important;
+   background-color: #201f1f;
 }
 
 .navbar-style a:hover{
@@ -11,7 +11,7 @@
 }
 
 .nav-link {
-   background-color: rgb(32, 31, 31, 0.9);
+   background-color: transparent !important;
 }
 
 .flag {
