--- a/src/styles/Work/Projects.scss
+++ b/src/styles/Work/Projects.scss
@@ -1,13 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 .projects-bg {
-  background-color: #201f1f;}
-
+  background-color: #201f1f;
+}
 
 .projects-cards small {
   font-size: medium;
-  color: rgb(255, 255, 255)
+  color: rgb(255, 255, 255);
 }
-
 
 .projects-cards h5 {
   color: rgb(235, 185, 79);
@@ -20,20 +19,16 @@
   height: fit-content !important;
   font-family: "Montserrat", sans-serif;
 
-
-
   padding-top: 85px;
   padding-bottom: 40px;
 }
 
-
 .card-body {
-  background-color:#201f1f;
+  background-color: #201f1f;
 }
 
 .card {
   border: gainsboro !important;
-
 }
 
 @media (max-width: 1000px) {
