--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -80,7 +80,7 @@
     margin-top: 20px;
   }
   .contact {
-    height: 35vh;
+    height: fit-content;
   }
   .social-icons img {
     width: 35px;
@@ -106,7 +106,7 @@
     font-size: larger;
   }  
   .contact {
-    height: 40vh;
+    height: fit-content;
   }
 }
 
