--- a/src/styles/Titles.scss
+++ b/src/styles/Titles.scss
@@ -12,6 +12,7 @@
     border-radius: 0% !important;
     text-align: center;
     text-transform: uppercase;
+    border: 1px solid #201f1f !important;
   }
   
   .jumbotron h1{
