--- a/src/styles/ReadMe/ReadMe.scss
+++ b/src/styles/ReadMe/ReadMe.scss
@@ -65,6 +65,10 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   line-height: 55px;
+ 
+  ul {
+    list-style: none;
+  }
 }
 
 @media (min-width: 30px) {
